[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Field.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sounds/SFX/open_sfx.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/SFX/fire_sfx.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/SFX/victory_sfx.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/SFX/flag_sfx.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sounds/Kirby - Gourmet Race (Electro_Chiptune) remix-136724831.mp3" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Music.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/BG.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Voice.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleGo0000.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleGo0400.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleStop0400.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleStop0200.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleGo0200.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleGo0100.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleGo0300.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleStop0000.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleStop0100.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/Sounds/NV_Custom_Yunbou_CustomWhistleStop0300.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/Sounds/239900__thesubber13__scream-1.ogg" type="AudioStream" id=21]
[ext_resource path="res://Assets/Materials/pixelation.tres" type="Material" id=22]

[node name="Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 424.0 ]
}

[node name="BG" parent="." instance=ExtResource( 9 )]
material = ExtResource( 22 )
animation = "default"

[node name="Field" parent="." instance=ExtResource( 1 )]
rect_pivot_offset = Vector2( -344, 72 )

[node name="OpenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="FlagSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="FireSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="VictorySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Music" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 7 )
volume_db = -30.0

[node name="Scream" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 21 )
volume_db = -10.0
script = null

[node name="Voice" parent="." instance=ExtResource( 10 )]
volume_db = 10.0
voices = [ ExtResource( 11 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 13 ) ]
